<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="card"
            type="android.example.com.matsusmagic.model.Card" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_fragment"
            android:visibility="visible"
            >

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="30sp"
                    android:autoSizeMinTextSize="20sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@{card.name}"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/setTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="16sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@{card.set_name}"
                    android:textColor="@color/goldButton"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <View
                android:id="@+id/nameseparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="#C39450"
                android:paddingHorizontal="30dp"
                app:layout_constraintBottom_toTopOf="@id/linear1"
                app:layout_constraintTop_toBottomOf="@id/nameLayout" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLayout">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="215dp"
                    android:layout_height="305dp"
                    android:layout_gravity="center_horizontal"
                    android:imageurl="@{card.image_uris.large}"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/card_image_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/usdTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#6C8DEF"
                        android:gravity="center_horizontal"
                        android:text="@{`$` + card.prices.usd.toString()}"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tixTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#FFC107"
                        android:gravity="center_horizontal"
                        android:text="@{card.prices.tix.toString() + `tix`}"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:background= "@drawable/bg_card_info"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:id="@+id/buttonlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/addToDeckButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybutton"
                    android:backgroundTint="#FFC107"
                    android:text="@string/add_to_deck_button"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/gathererButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybutton"
                    android:backgroundTint="#0f0f0f"
                    android:text="@string/view_on_gatherer_button"
                    android:textColor="@color/goldButton"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/edhrecButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybutton"
                    android:backgroundTint="#0f0f0f"
                    android:text="@string/view_on_edhrec_button"
                    android:textColor="#F4F6F5"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/datalayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonlayout">

                <TextView
                    android:id="@+id/oracleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="3dp"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/textbox"
                    android:padding="3dp"
                    android:text="@{card.oracle_text}"
                    tools:ignore="textSize" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/legalitiesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/datalayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/standardTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_standard"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/modernTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_modern"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/legacyTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_legacy"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vintageTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_vintage"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/commanderTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_commander"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pauperTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_pauper"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/historicTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_historic"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pioneerTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/format_pioneer"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rulingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#66C4CCC8"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/legalitiesLayout">


                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#66C4CCC8"
                    android:shrinkColumns="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#101010">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="13"
                            android:gravity="center_horizontal"
                            android:padding="4dp"
                            android:text="@string/rulings"
                            android:textColor="#FFFFCC80"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/listError2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/loadingView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>