<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        tools:context=".view.MenuFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/searchbutton"
                    style="@style/MenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/cards_and_prices"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/decksbutton"
                    style="@style/MenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/my_decks"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchbutton" />

                <TextView
                    android:id="@+id/commanderofthedaytextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/commander_of_the_day"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/decksbutton" />

                <View
                    android:id="@+id/titleSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="#C39450"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="3dp"
                    app:layout_constraintTop_toBottomOf="@id/commanderofthedaytextview" />

                <LinearLayout
                    android:id="@+id/linearcommander"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/titleSeparator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ProgressBar
                        android:id="@+id/loadingViewMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/linearcommander"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <ImageView
                        android:id="@+id/commandercardimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:contentDescription="@string/card_image_description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleSeparator" />

                    <LinearLayout
                        android:id="@+id/priceslayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/commandercardimage"
                        android:visibility="gone">



                        <TextView
                            android:id="@+id/usdTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="#6C8DEF"
                            android:gravity="center_horizontal"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tixTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="#FFC107"
                            android:gravity="center_horizontal"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/imageSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="3dp"
                    android:background="#C39450"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="3dp"
                    app:layout_constraintTop_toBottomOf="@id/linearcommander" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageSeparator">

                    <TextView
                        android:id="@+id/communitycontentTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/community_content"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/youtubeList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        android:visibility="gone"
                        tools:itemCount="3" />

                    <TextView
                        android:id="@+id/morecontenttextview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/more_content"
                        android:textSize="24sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/listErrorMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_message"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>